--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url= jdbc:mysql://localhost:3306/backend_SRR?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
